--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.1.3",
+        "vue": "^3.2.31",
+        "vue-axios": "^3.4.1",
+        "vue-router": "^4.0.12"
     }
 }
